[package]
name = "workspace-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one = { path = "./one" }

[dev-dependencies]
criterion = "0.4"

[workspace]
members = [
  "one",
  "two"
]

[[bench]]
name = "bench_test"
harness = false
